--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Zdraveite
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Purva stranica</title>
+	</head>
+	<body>
+		<p>Sudurjanie na paragraf 1:</p>
+		<p>Sudurjanie na paragraf 2:</p>
+	</body>
+</html>
