--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Purva stranica</title>
+		<title>Home page</title>
 	</head>
 	<body>
+		<h1>Zaglavie na stranicata</h1>
+		<img width="300px" src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Aurora_in_Abisko_near_Tornetr%C3%A4sk.jpg">
 		<p>Sudurjanie na paragraf 1:</p>
 		<p>Sudurjanie na paragraf 2:</p>
 	</body>
