--- a/index.html
+++ b/index.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html>
+	<style>
+		
+		table,th,td {
+		border:1px solid black;
+		}
+                body {
+                  background:url(color.jpg);
+		 background-repeat:no-repeat;
+		 background-size:1700px 80px;
+		{
+	</style>
 	<head>
+		
 		<title>Home page</title>
 	</head>
 	<body>
-		<h1>Zaglavie na stranicata</h1>
-		<img width="300px" src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Aurora_in_Abisko_near_Tornetr%C3%A4sk.jpg">
-		<p>Sudurjanie na paragraf 1:</p>
-		<p>Sudurjanie na paragraf 2:</p>
+		<h1 style="text-align:center;">Welcome to the NBA world!</h1>
+		<p><b>Current NBA standings:</b></p>
+		<p>Eastern Conference</p>
+		<table>
+		   <tr>
+			<th>POS</th>
+			<th>TEAM</th>
+			<th>WINS</th>
+			<th>LOSES</th>
+		   </tr>
+		   <tr>
+			<td>1.</td>
+			<td>Boston Celtics</td>
+			<td>20</td>
+			<td>5</td>
+		   </tr>
+		   <tr>
+			<td>2.</td>
+			<td>Milwaukee Bucks</td>
+			<td>17</td>
+			<td>6</td>
+		   </tr>
+                   <tr>
+			<td>3.</td>
+			<td>Cleveland Cavaliers</td>
+			<td>15</td>
+			<td>9</td>
+		   </tr>
+		   <tr>
+			<td>4.</td>
+			<td>Atalanta Hawks</td>
+			<td>13</td>
+			<td>11</td>
+		   </tr>
+                   <tr>
+			<td>5.</td>
+			<td>Indiana Pacers</td>
+			<td>13</td>
+			<td>11</td>
+		   </tr>
+                   <tr>
+			<td>6.</td>
+			<td>Brooklyn Nets</td>
+			<td>13</td>
+			<td>12</td>
+		   </tr>
+                   <tr>
+			<td>7.</td>
+			<td>Philadelphia 76ers</td>
+			<td>12</td>
+			<td>12</td>
+		   </tr>
+		   <tr>
+			<td>8.</td>
+			<td>Toronto Raptors</td>
+			<td>12</td>
+			<td>12</td>
+		   </tr>
+		   <tr>
+			<td>9.</td>
+			<td>Miami Heat</td>
+			<td>11</td>
+			<td>13</td>
+		   </tr>
+                   <tr>
+			<td>10.</td>
+			<td>New York Knicks</td>
+			<td>11</td>
+			<td>13</td>
+		   </tr>
+                   <tr>
+			<td>11.</td>
+			<td>Washington Wizards</td>
+			<td>11</td>
+			<td>13</td>
+		   </tr>
+                   <tr>
+			<td>12.</td>
+			<td>Chicago Bulls</td>
+			<td>9</td>
+			<td>14</td>
+		   </tr>
+                   <tr>
+			<td>13.</td>
+			<td>Charlote Hornets</td>
+			<td>7</td>
+			<td>17</td>
+		   </tr>
+                   <tr>
+			<td>14.</td>
+			<td>Detroit Pistons</td>
+			<td>6</td>
+			<td>19</td>
+		   </tr>
+                   <tr>
+			<td>15.</td>
+			<td>Orlando Magic</td>
+			<td>5</td>
+			<td>20</td>
+		   </tr>
+		</table>
+		<p>If you want to learn more about the league <a href="https://www.nba.com/">CLICK HERE!</a></p>
 	</body>
 </html>
