--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<head>
 		
 		<title>Home page</title>
+		 <link rel="icon" type="image/x-icon" href="favicon.png">
 	</head>
 	<body>
 		<h1 style="text-align:center;">Welcome to the NBA world!</h1>
