--- a/Highlights.html
+++ b/Highlights.html
@@ -1,12 +1,48 @@
  <!DOCTYPE html>
 <html>
+<style>
+	*{
+	     margin:0;
+             padding:0;
+        }
+	 nav{
+             width:120%;
+             height:70px;
+             background-color:#ADD8E6;
+        }
+         ul{
+             margin:0;
+             padding:0;
+	}
+         ul li {
+             list-style:none;
+	     text-align:center;
+             display:inline-block;
+             line-height:70px;
+	}
+         ul li a{
+             text-decoration:none;
+             color:black;
+             padding:0px 130px;
+             text-align:center;
+        } 
+
+	</style>
 <head>
 <title>Highlights</title>
 </head>
 <body>
+    <nav>
+	<ul>
+               <li><a href="Home.html">Home</a></li>
+	       <li><a href="Teams.html">Teams</a></li>
+               <li><a href="Standings.html">Standings</a></li>
+               <li><a href="Highlights.html">Highlights</a></li>
+	</ul>
+    </nav>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 
 </body>
 </html> 
