--- a/Standings.html
+++ b/Standings.html
@@ -1,20 +1,51 @@
  <!DOCTYPE html>
 <html>
 <style>
+        *{
+	     margin:0;
+             padding:0;
+        }
+	 nav{
+             width:120%;
+             height:70px;
+             background-color:#ADD8E6;
+        }
+         ul{
+             margin:0;
+             padding:0;
+	}
+         ul li {
+             list-style:none;
+	     text-align:center;
+             display:inline-block;
+             line-height:70px;
+	}
+         ul li a{
+             text-decoration:none;
+             color:black;
+             padding:0px 130px;
+             text-align:center;
+        } 
 		
-		table,th,td {
-		border:1px solid black;
-		}
-                body {
-                  background:url(color.jpg);
-		 background-repeat:no-repeat;
-		 background-size:1700px 60px;
-		{
-	</style>
+	table,th,td {
+	border:1px solid black;
+        border-style:groove;
+        border-color:red;
+        margin:60px;
+	}
+</style>
 <head>
 <title>Standings</title>
 </head>
 <body>
+   <nav>
+	<ul>
+               <li><a href="Home.html">Home</a></li>
+	       <li><a href="Teams.html">Teams</a></li>
+               <li><a href="Standings.html">Standings</a></li>
+               <li><a href="Highlights.html">Highlights</a></li>
+	</ul>
+   </nav>
 
 <p><b>Current NBA standings:</b></p>
 		<p>Eastern Conference</p>
