--- a/Home.html
+++ b/Home.html
@@ -1,12 +1,63 @@
  <!DOCTYPE html>
 <html>
+<style>
+	*{
+	     margin:0;
+             padding:0;
+        }
+	 nav{
+             width:120%;
+             height:70px;
+             background-color:#ADD8E6;
+        }
+         ul{
+             margin:0;
+             padding:0;
+	}
+         ul li {
+             list-style:none;
+	     text-align:center;
+             display:inline-block;
+             line-height:70px;
+	}
+         ul li a{
+             text-decoration:none;
+             color:black;
+             padding:0px 130px;
+             text-align:center;
+        } 
+         body{
+	  background-color:#ffff;
+        }
+        h1,h2{
+	 text-align:center;
+        }
+	p{
+	 margin:10px;
+	}
+        img{
+         margin:10px;
+        }
+	</style>
 <head>
 <title>Home</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+   <nav>
+	     <ul>
+                <li><a href="Home.html">Home</a></li>
+		<li><a href="Teams.html">Teams</a></li>
+                <li><a href="Standings.html">Standings</a></li>
+                <li><a href="Highlights.html">Highlights</a></li>
+             </ul>
+           </nav>
+   <h1>History of Basketball</h1>
+   <p>Invented in 1891 by Canadian-American gym teacher James Naismith in Springfield, Massachusetts, United States, basketball has evolved to become one of the world's most popular and widely viewed sports.It is a team sport in which two teams, most commonly of five players each, opposing one another on a rectangular court, compete with the primary objective of shooting a basketball (approximately 9.4 inches (24 cm) in diameter) through the defender's hoop (a basket 18 inches (46 cm) in diameter mounted 10 feet (3.048 m) high to a backboard at each end of the court, while preventing the opposing team from shooting through their own hoop. A field goal is worth two points, unless made from behind the three-point line, when it is worth three. After a foul, timed play stops and the player fouled or designated to shoot a technical foul is given one, two or three one-point free throws. The team with the most points at the end of the game wins, but if regulation play expires with the score tied, an additional period of play (overtime) is mandated. </p>
+    <img width="200px" src="james.jpg" style="float:left">
+    <p>James Naismith (November 6, 1861 – November 28, 1939) was a Canadian-American physical educator, physician, Christian chaplain, and sports coach, best known as the inventor of the game of basketball.After moving to the United States, he wrote the original basketball rule book and founded the University of Kansas basketball program.Naismith lived to see basketball adopted as an Olympic demonstration sport in 1904 and as an official event at the 1936 Summer Olympics in Berlin, as well as the birth of the National Invitation Tournament (1938) and the NCAA Tournament (1939).Born and raised on a farm near Almonte, Ontario, Naismith studied and taught physical education at McGill University in Montreal until 1890 before moving to Springfield, Massachusetts, United States later that year, where in 1891 he designed the game of basketball while he was teaching at the International YMCA Training School.Seven years after inventing basketball, Naismith received his medical degree in Denver in 1898. He then arrived at the University of Kansas, later becoming the Kansas Jayhawks' athletic director and coach.While a coach at Kansas, Naismith coached Phog Allen, who later became the coach at Kansas for 39 seasons, beginning a lengthy and prestigious coaching tree. </p>
+    <h2>NBA as what it stands today</h2>
+    <img width="200px" height="300px" src="logo.png" style="float:left">
+    <p>The National Basketball Association (NBA) is a professional basketball league in North America. The league is composed of 30 teams (29 in the United States and 1 in Canada) and is one of the major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.
+The league was founded in New York City on June 6, 1946, as the Basketball Association of America (BAA).It changed its name to the National Basketball Association on August 3, 1949, after merging with the competing National Basketball League (NBL). In 1976, the NBA and the American Basketball Association (ABA) merged, adding four franchises to the NBA. The NBA's regular season runs from October to April, with each team playing 82 games. The league's playoff tournament extends into June. As of 2020, NBA players are the world's best paid athletes by average annual salary per player.The NBA is an active member of USA Basketball (USAB),which is recognized by the FIBA (International Basketball Federation) as the national governing body for basketball in the United States. The league's several international as well as individual team offices are directed out of its head offices in Midtown Manhattan, while its NBA Entertainment and NBA TV studios are directed out of offices located in Secaucus, New Jersey. In North America, the NBA is the third wealthiest professional sport league after the National Football League (NFL) and Major League Baseball (MLB) by revenue, and among the top four in the world.</p>
 </body>
 </html> 
