--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         }
 	 nav{
              width:120%;
-             height:80px;
-             background-color:yellow;
+             height:70px;
+             background-color:#ADD8E6;
         }
          ul{
              margin:0;
@@ -18,12 +18,21 @@
              list-style:none;
 	     text-align:center;
              display:inline-block;
+             line-height:70px;
 	}
          ul li a{
              text-decoration:none;
              color:black;
              padding:0px 130px;
              text-align:center;
+        }
+         body{
+           background-image: url('good.jpg');
+           background-repeat: no-repeat;
+           background-size:100% 100%;
+           background-attachment:fixed;
+           height:100%;
+           background-position:center;
         } 
 
 	</style>
