--- a/Standings.html
+++ b/Standings.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <style>
         *{
@@ -28,14 +28,37 @@
         } 
 		
 	table,th,td {
-	border:1px solid black;
-        border-style:groove;
-        border-color:red;
-        margin:60px;
+	   border:1px solid black;
+           border-collapse:collapse;
+           margin:60px;
 	}
+        th,td {
+           padding:10px;
+        }
+        tr:nth-child(even) {
+           background-color:#EEEE;
+        }
+        tr:hover{
+           background-color:#D6EEEE;
+        }
+        p{
+           text-align:center;
+           font-size:30px;
+        }
+        p a{
+        	text-decoration:none;
+        	color:black;
+        }
+        img{
+          margin:10px;
+        }
+         h1{
+         text-align:center;
+         }
 </style>
 <head>
-<title>Standings</title>
+  <title>Standings</title>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
    <nav>
@@ -47,8 +70,9 @@
 	</ul>
    </nav>
 
-<p><b>Current NBA standings:</b></p>
-		<p>Eastern Conference</p>
+   <h1><b>NBA STANDINGS 2021/2022 SEASON</b></h1>
+  	<p>The NBA playoffs is the postseason tournament of the National Basketball Association (NBA) held to determine the league's champion.An annual best-of-seven  			elimination tournament,the NBA playoffs are held after the league's regular season and its preliminary postseason tournament, the NBA Play-In Tournament.This is the best about the NBA.The information used to create the tables can be found by going to the following website,that is truly amazing and mind-blowing and truly a must go for fans:<a href="https://www.google.com/search?client=firefox-b-d&q=nba+standings">HERE!</a></p>
+      <p>Eastern Conference</p>
 		<table>
 		   <tr>
 			<th>POS</th>
@@ -58,95 +82,196 @@
 		   </tr>
 		   <tr>
 			<td>1.</td>
-			<td>Boston Celtics</td>
-			<td>20</td>
-			<td>5</td>
+			<td>Miami Heat</td>
+			<td>53</td>
+			<td>29</td>
 		   </tr>
 		   <tr>
 			<td>2.</td>
-			<td>Milwaukee Bucks</td>
-			<td>17</td>
-			<td>6</td>
+			<td>Boston Celtics</td>
+			<td>51</td>
+			<td>31</td>
 		   </tr>
                    <tr>
 			<td>3.</td>
-			<td>Cleveland Cavaliers</td>
-			<td>15</td>
-			<td>9</td>
+			<td>Milwaukee Bucks</td>
+			<td>51</td>
+			<td>31</td>
 		   </tr>
 		   <tr>
 			<td>4.</td>
-			<td>Atalanta Hawks</td>
-			<td>13</td>
-			<td>11</td>
+			<td>Philadelphia 76ers</td>
+			<td>51</td>
+			<td>31</td>
 		   </tr>
                    <tr>
 			<td>5.</td>
-			<td>Indiana Pacers</td>
-			<td>13</td>
-			<td>11</td>
+			<td>Toronto Raptors</td>
+			<td>48</td>
+			<td>34</td>
 		   </tr>
                    <tr>
 			<td>6.</td>
-			<td>Brooklyn Nets</td>
-			<td>13</td>
-			<td>12</td>
+			<td>Chicago Bulls</td>
+			<td>46</td>
+			<td>36</td>
 		   </tr>
                    <tr>
 			<td>7.</td>
-			<td>Philadelphia 76ers</td>
-			<td>12</td>
-			<td>12</td>
+			<td>Brooklyn Nets</td>
+			<td>44</td>
+			<td>38</td>
 		   </tr>
 		   <tr>
 			<td>8.</td>
-			<td>Toronto Raptors</td>
-			<td>12</td>
-			<td>12</td>
+			<td>Cleveland Cavaliers</td>
+			<td>44</td>
+			<td>38</td>
 		   </tr>
 		   <tr>
 			<td>9.</td>
-			<td>Miami Heat</td>
-			<td>11</td>
-			<td>13</td>
+			<td>Atalanta Hawks</td>
+			<td>43</td>
+			<td>39</td>
 		   </tr>
                    <tr>
 			<td>10.</td>
-			<td>New York Knicks</td>
-			<td>11</td>
-			<td>13</td>
+			<td>Charlotte Hornets</td>
+			<td>43</td>
+			<td>39</td>
 		   </tr>
                    <tr>
 			<td>11.</td>
-			<td>Washington Wizards</td>
-			<td>11</td>
-			<td>13</td>
+			<td>New York Knicks</td>
+			<td>37</td>
+			<td>45</td>
 		   </tr>
                    <tr>
 			<td>12.</td>
-			<td>Chicago Bulls</td>
-			<td>9</td>
-			<td>14</td>
+			<td>Washington Wizards</td>
+			<td>35</td>
+			<td>47</td>
 		   </tr>
                    <tr>
 			<td>13.</td>
-			<td>Charlote Hornets</td>
-			<td>7</td>
-			<td>17</td>
+			<td>Indiana Pacers</td>
+			<td>25</td>
+			<td>57</td>
 		   </tr>
                    <tr>
 			<td>14.</td>
 			<td>Detroit Pistons</td>
-			<td>6</td>
-			<td>19</td>
+			<td>23</td>
+			<td>59</td>
 		   </tr>
                    <tr>
 			<td>15.</td>
 			<td>Orlando Magic</td>
-			<td>5</td>
-			<td>20</td>
+			<td>22</td>
+			<td>60</td>
 		   </tr>
 		</table>
+      <p1>Western Conference</p1>
+                <table>
+		   <tr>
+			<th>POS</th>
+			<th>TEAM</th>
+			<th>WINS</th>
+			<th>LOSES</th>
+		   </tr>
+		   <tr>
+			<td>1.</td>
+			<td>Phoenix Suns</td>
+			<td>64</td>
+			<td>18</td>
+		   </tr>
+		   <tr>
+			<td>2.</td>
+			<td>Memphis Grizzlies</td>
+			<td>56</td>
+			<td>26</td>
+		   </tr>
+                   <tr>
+			<td>3.</td>
+			<td>Golden State Warriors</td>
+			<td>53</td>
+			<td>29</td>
+		   </tr>
+		   <tr>
+			<td>4.</td>
+			<td>Dallas Mavericks</td>
+			<td>52</td>
+			<td>30</td>
+		   </tr>
+                   <tr>
+			<td>5.</td>
+			<td>Utah Jazz</td>
+			<td>49</td>
+			<td>33</td>
+		   </tr>
+                   <tr>
+			<td>6.</td>
+			<td>Denver Nuggets</td>
+			<td>48</td>
+			<td>34</td>
+		   </tr>
+                   <tr>
+			<td>7.</td>
+			<td>Minnesota Timberwolves</td>
+			<td>46</td>
+			<td>36</td>
+		   </tr>
+		   <tr>
+			<td>8.</td>
+			<td>Los Angelis Clippers</td>
+			<td>42</td>
+			<td>40</td>
+		   </tr>
+		   <tr>
+			<td>9.</td>
+			<td>New Orleans Pelicans</td>
+			<td>36</td>
+			<td>46</td>
+		   </tr>
+                   <tr>
+			<td>10.</td>
+			<td>San Antonio Spurs</td>
+			<td>34</td>
+			<td>48</td>
+		   </tr>
+                   <tr>
+			<td>11.</td>
+			<td>Los Angelis Lakers</td>
+			<td>33</td>
+			<td>49</td>
+		   </tr>
+                   <tr>
+			<td>12.</td>
+			<td>Sacramento Kings</td>
+			<td>30</td>
+			<td>52</td>
+		   </tr>
+                   <tr>
+			<td>13.</td>
+			<td>Portland Trail Blazers</td>
+			<td>27</td>
+			<td>55</td>
+		   </tr>
+                   <tr>
+			<td>14.</td>
+			<td>Oklahoma City Thunder</td>
+			<td>24</td>
+			<td>58</td>
+		   </tr>
+                   <tr>
+			<td>15.</td>
+			<td>Houston Rockets</td>
+			<td>20</td>
+			<td>62</td>
+		   </tr>
+		</table>
+        <img src="finals.png" alt="Finals logo" width="200" height="200"> 
+        <img src="curry.jpg" alt="Curry holding the trophy" width="200" height="200"> 
 
 </body>
 </html> 
