--- a/Teams.html
+++ b/Teams.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <style>
 	 *{
@@ -29,10 +29,25 @@
          h1{
           text-align:center;
         }
-
+         p{
+           margin:20px;
+           font-size:15px; 
+        }
+        p a{
+        	text-decoration:none;
+        	color:black;
+          }
+       table{
+       		text-align:center;
+       }
+       td a{
+       		text-decoration:none;
+       		color:black;
+       } 
 	</style>
 <head>
-<title>Standings</title>
+  <title>Teams</title>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
     <nav>
@@ -45,7 +60,69 @@
     </nav>
 
     <h1>ALL TEAMS</h1>
-    <p><a href="nba.com">Standings</a></p>
-
+    <table>
+    	<tr>
+    	 	<th>ATLANTIC</th>
+			<th>CENTRAL</th>
+			<th>SOUTHEAST</th>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/celtics">Boston Celtics</a></td>
+			<td><a href="https://www.nba.com/bulls">Chicago Bulls</a></td>
+			<td><a href="https://www.nba.com/hawks">Atalanta Hawks</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/nets">Brooklyn Nets</a></td>
+			<td><a href="https://www.nba.com/cavaliers">Cleveland Cavs</a></td>
+			<td><a href="https://www.nba.com/hornets">Charlotte Hornets</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/knicks">New York Knicks</a></td>
+			<td><a href="https://www.nba.com/pistons">Detroit Pistons</a></td>
+			<td><a href="https://www.nba.com/heat">Miami Heat</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/sixers">Philadelphia 76ers</a></td>
+			<td><a href="https://www.nba.com/pacers">Indiana Pacers</a></td>
+			<td><a href="https://www.nba.com/magic">Orlando Magic</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/raptors">Toronto Raptors</a></td>
+			<td><a href="https://www.nba.com/bucks">Milwaukee Bucks</a></td>
+			<td><a href="https://www.nba.com/wizards">Washington Wizards</a></td>
+		</tr>
+		<tr>
+    	 	<th>NORTHWEST</th>
+			<th>PACIFIC</th>
+			<th>SOUTHWEST</th>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/nuggets">Denver Nuggets</a></td>
+			<td><a href="https://www.nba.com/warriors">Golden State Warriors</a></td>
+			<td><a href="https://www.nba.com/mavericks">Dallas Mavericks</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/timberwolves">Minnesota Wolves</a></td>
+			<td><a href="https://www.nba.com/clippers">Los Angelis Clippers</a></td>
+			<td><a href="https://www.nba.com/rockets">Houston Rockets</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/thunder">Oklahoma City Thunder</a></td>
+			<td><a href="https://www.nba.com/lakers">Los Angelis Lakers</a></td>
+			<td><a href="https://www.nba.com/grizzlies">Memphis Grizzlies</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/blazers">Portland Trail Blazers</a></td>
+			<td><a href="https://www.nba.com/suns">Phoenix Suns</a></td>
+			<td><a href="https://www.nba.com/pelicans">New Orleans Pelicans</a></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.nba.com/raptors">Utah Jazz</a></td>
+			<td><a href="https://www.nba.com/bucks">Sacramento Kings</a></td>
+			<td><a href="https://www.nba.com/wizards">San Antonio Spurs</a></td>
+		</tr>
+     <img src="east.png" alt="Eastern Conference logo" width="200" height="200">
+     <img src="west.png" alt="Western Conference logo" width="200" height="200">
+     <p>The information that has been used above can be find on this website,just click on the last word on this sentance,thank you: <a href="https://www.nba.com/teams">HERE!</a></p>  
 </body>
 </html> 
