--- a/Highlights.html
+++ b/Highlights.html
@@ -5,7 +5,7 @@
 	     margin:0;
              padding:0;
         }
-	 nav{
+	 	 nav{
              width:120%;
              height:70px;
              background-color:#ADD8E6;
@@ -13,13 +13,13 @@
          ul{
              margin:0;
              padding:0;
-	}
+		}
          ul li {
              list-style:none;
 	     text-align:center;
              display:inline-block;
              line-height:70px;
-	}
+		}
          ul li a{
              text-decoration:none;
              color:black;
@@ -29,20 +29,32 @@
 
 	</style>
 <head>
-<title>Highlights</title>
+	<title>Highlights</title>
+	<link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
     <nav>
 	<ul>
-               <li><a href="Home.html">Home</a></li>
-	       <li><a href="Teams.html">Teams</a></li>
-               <li><a href="Standings.html">Standings</a></li>
-               <li><a href="Highlights.html">Highlights</a></li>
+		<li><a href="Home.html">Home</a></li>
+		<li><a href="Teams.html">Teams</a></li>
+        <li><a href="Standings.html">Standings</a></li>
+        <li><a href="Highlights.html">Highlights</a></li>
 	</ul>
     </nav>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>HIGLIGHTS</h1>
+    <p>Video from the early days of basketball.The video is with a black and white format.The Harlem Gloutrobals are the people that play in the video.They are amazing because they do trickshots and amaze the crowd.Thats why the crowd is on its feet and is amazed and they are celebrating every made basket!The videos and the audio was found in this website <a href="https://commons.wikimedia.org/wiki/Category:Videos">CLICK HERE!</a></p>
+     <video width="320" height="240" controls>
+  		<source src="https://upload.wikimedia.org/wikipedia/commons/6/61/De_%27Harlem_Globetrotters%27_in_Scheveningen_Weeknummer_58-27_-_Open_Beelden_-_11508.ogv" 				type="video/ogg">
+		Your browser does not support the video tag.
+	</video>
+	<audio controls>
+  		<source src="https://upload.wikimedia.org/wikipedia/commons/f/f7/En-us-basketball.ogg" type="audio/ogg">
+		Your browser does not support the audio element.
+	</audio>
+	<img src="ball.jpg" alt="A ball and a hoop" width="200" height="200">
+	<img src="floor.jpg" alt="A ball on the floor" width="200" height="200"> 
+	 
 
 </body>
 </html> 
