--- a/Highlights.html
+++ b/Highlights.html
@@ -25,7 +25,11 @@
              color:black;
              padding:0px 130px;
              text-align:center;
-        } 
+        }
+         p a{
+         	text-decoration:none;
+         	color:black;
+        }
 
 	</style>
 <head>
