--- a/Highlights.html
+++ b/Highlights.html
@@ -1,40 +1,9 @@
  <!DOCTYPE html>
 <html>
-<style>
-	*{
-	     margin:0;
-             padding:0;
-        }
-	 	 nav{
-             width:120%;
-             height:70px;
-             background-color:#ADD8E6;
-        }
-         ul{
-             margin:0;
-             padding:0;
-		}
-         ul li {
-             list-style:none;
-	     text-align:center;
-             display:inline-block;
-             line-height:70px;
-		}
-         ul li a{
-             text-decoration:none;
-             color:black;
-             padding:0px 130px;
-             text-align:center;
-        }
-         p a{
-         	text-decoration:none;
-         	color:black;
-        }
-
-	</style>
 <head>
 	<title>Highlights</title>
 	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link rel="stylesheet" href="design.css">
 </head>
 <body>
     <nav>
@@ -56,8 +25,8 @@
   		<source src="https://upload.wikimedia.org/wikipedia/commons/f/f7/En-us-basketball.ogg" type="audio/ogg">
 		Your browser does not support the audio element.
 	</audio>
-	<img src="ball.jpg" alt="A ball and a hoop" width="200" height="200">
-	<img src="floor.jpg" alt="A ball on the floor" width="200" height="200"> 
+	<img src="ball.jpg" alt="A ball and a hoop">
+	<img src="floor.jpg" alt="A ball on the floor"> 
 	 
 
 </body>
