--- a/Teams.html
+++ b/Teams.html
@@ -1,53 +1,9 @@
 <!DOCTYPE html>
 <html>
-<style>
-	 *{
-	     margin:0;
-             padding:0;
-        }
-	 nav{
-             width:120%;
-             height:70px;
-             background-color:#ADD8E6;
-        }
-         ul{
-             margin:0;
-             padding:0;
-	}
-         ul li {
-             list-style:none;
-	     text-align:center;
-             display:inline-block;
-             line-height:70px;
-	}
-         ul li a{
-             text-decoration:none;
-             color:black;
-             padding:0px 130px;
-             text-align:center;
-        } 
-         h1{
-          text-align:center;
-        }
-         p{
-           margin:20px;
-           font-size:15px; 
-        }
-        p a{
-        	text-decoration:none;
-        	color:black;
-          }
-       table{
-       		text-align:center;
-       }
-       td a{
-       		text-decoration:none;
-       		color:black;
-       } 
-	</style>
 <head>
   <title>Teams</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
     <nav>
@@ -60,7 +16,7 @@
     </nav>
 
     <h1>ALL TEAMS</h1>
-    <table>
+    <table id="tableteams">
     	<tr>
     	 	<th>ATLANTIC</th>
 			<th>CENTRAL</th>
@@ -121,8 +77,8 @@
 			<td><a href="https://www.nba.com/bucks">Sacramento Kings</a></td>
 			<td><a href="https://www.nba.com/wizards">San Antonio Spurs</a></td>
 		</tr>
-     <img src="east.png" alt="Eastern Conference logo" width="200" height="200">
-     <img src="west.png" alt="Western Conference logo" width="200" height="200">
+     <img src="east.png" alt="Eastern Conference logo">
+     <img src="west.png" alt="Western Conference logo">
      <p>The information that has been used above can be find on this website,just click on the last word on this sentance,thank you: <a href="https://www.nba.com/teams">HERE!</a></p>  
 </body>
 </html> 
