--- a/index.html
+++ b/index.html
@@ -1,46 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<style>
-	 *{
-	     margin:0;
-             padding:0;
-        }
-	 nav{
-             width:120%;
-             height:70px;
-             background-color:#ADD8E6;
-        }
-         ul{
-             margin:0;
-             padding:0;
-	}
-         ul li {
-             list-style:none;
-	     text-align:center;
-             display:inline-block;
-             line-height:70px;
-	}
-         ul li a{
-             text-decoration:none;
-             color:black;
-             padding:0px 130px;
-             text-align:center;
-        }
-         body{
-           background-image: url('good.jpg');
-           background-repeat: no-repeat;
-           background-size:100% 100%;
-           background-attachment:fixed;
-           height:100%;
-           background-position:center;
-        } 
-
-	</style>
+	
 	<head>
 		<title>Home page</title>
 		 <link rel="icon" type="image/x-icon" href="favicon.png">
+		 <link rel="stylesheet" href="design.css">
 	</head>
-	<body>
+	<body id="bodyindex">
               <nav>
 		<ul>
                   <li><a href="Home.html">Home</a></li>
