--- a/Highlights.html
+++ b/Highlights.html
@@ -4,6 +4,7 @@
 	<title>Highlights</title>
 	<link rel="icon" type="image/x-icon" href="favicon.png">
 	<link rel="stylesheet" href="design.css">
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
 <body>
     <nav>
@@ -14,10 +15,11 @@
         <li><a href="Highlights.html">Highlights</a></li>
 	</ul>
     </nav>
-
-    <h1>HIGLIGHTS</h1>
+	<div>
+    	<h1>HIGLIGHTS</h1>
+    </div>
     <p>Video from the early days of basketball.The video is with a black and white format.The Harlem Gloutrobals are the people that play in the video.They are amazing because they do trickshots and amaze the crowd.Thats why the crowd is on its feet and is amazed and they are celebrating every made basket!The videos and the audio was found in this website <a href="https://commons.wikimedia.org/wiki/Category:Videos">CLICK HERE!</a></p>
-     <video width="320" height="240" controls>
+     <video controls>
   		<source src="https://upload.wikimedia.org/wikipedia/commons/6/61/De_%27Harlem_Globetrotters%27_in_Scheveningen_Weeknummer_58-27_-_Open_Beelden_-_11508.ogv" 				type="video/ogg">
 		Your browser does not support the video tag.
 	</video>
