--- a/Standings.html
+++ b/Standings.html
@@ -4,6 +4,7 @@
   <title>Standings</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" href="design.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
 <body>
    <nav>
@@ -14,10 +15,10 @@
                <li><a href="Highlights.html">Highlights</a></li>
 	</ul>
    </nav>
-
-   <h1><b>NBA STANDINGS 2021/2022 SEASON</b></h1>
-  	<h2>The NBA playoffs is the postseason tournament of the National Basketball Association (NBA) held to determine the league's champion.An annual best-of-seven  			elimination tournament,the NBA playoffs are held after the league's regular season and its preliminary postseason tournament, the NBA Play-In Tournament.This is the best about the NBA.The information used to create the tables can be found by going to the following website,that is truly amazing and mind-blowing and truly a must go for fans:<a href="https://www.google.com/search?client=firefox-b-d&q=nba+standings">HERE!</a></h2>
-      <p id="para1">Eastern Conference</p>
+   <div>
+   		<h1><b>NBA STANDINGS 2021/2022 SEASON</b></h1>
+  		<p id="standings">The NBA playoffs is the postseason tournament of the National Basketball Association (NBA) held to determine the league's champion.An annual best-of-seven elimination tournament,the NBA playoffs are held after the league's regular season and its preliminary postseason tournament, the NBA Play-In Tournament.This is the best about the NBA.The information used to create the tables can be found by going to the following website,that is truly amazing and mind-blowing and truly a must go for fans:<a href="https://www.google.com/search?client=firefox-b-d&q=nba+standings">HERE!</a></p>
+      	<p id="para1"><b>Eastern Conference</b></p>
 		<table id="tablestandings">
 		   <tr>
 			<th>POS</th>
@@ -116,7 +117,7 @@
 			<td>60</td>
 		   </tr>
 		</table>
-      <p id="para1">Western Conference</p>
+      	<p id="para1"><b>Western Conference</b></p>
           <table id="tablestandings">
 		   <tr>
 			<th>POS</th>
@@ -217,6 +218,6 @@
 		</table>
         <img src="finals.png" alt="Finals logo" width="200" height="200"> 
         <img src="curry.jpg" alt="Curry holding the trophy" width="200" height="200"> 
-
+	</div>
 </body>
 </html> 
