--- a/Teams.html
+++ b/Teams.html
@@ -4,18 +4,20 @@
   <title>Teams</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" href="design.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
 <body>
     <nav>
 	<ul>
               <li><a href="Home.html">Home</a></li>
-	      <li><a href="Teams.html">Teams</a></li>
+	      	  <li><a href="Teams.html">Teams</a></li>
               <li><a href="Standings.html">Standings</a></li>
               <li><a href="Highlights.html">Highlights</a></li>
 	</ul>
     </nav>
-
-    <h1>ALL TEAMS</h1>
+	<div>
+    	<h1>ALL TEAMS</h1>
+    </div>
     <table id="tableteams">
     	<tr>
     	 	<th>ATLANTIC</th>
@@ -73,9 +75,9 @@
 			<td><a href="https://www.nba.com/pelicans">New Orleans Pelicans</a></td>
 		</tr>
 		<tr>
-			<td><a href="https://www.nba.com/raptors">Utah Jazz</a></td>
-			<td><a href="https://www.nba.com/bucks">Sacramento Kings</a></td>
-			<td><a href="https://www.nba.com/wizards">San Antonio Spurs</a></td>
+			<td><a href="https://www.nba.com/jazz">Utah Jazz</a></td>
+			<td><a href="https://www.nba.com/kings">Sacramento Kings</a></td>
+			<td><a href="https://www.nba.com/spurs">San Antonio Spurs</a></td>
 		</tr>
      <img src="east.png" alt="Eastern Conference logo">
      <img src="west.png" alt="Western Conference logo">
