--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head>
 		 <title>Home page</title>
 		 <link rel="icon" type="image/x-icon" href="favicon.png">
-		 <link rel="stylesheet" href="design.css"> 
+		 <link rel="stylesheet" href="picnic.css">
+		 <link rel="stylesheet" href="design.css">
 	</head>
 <body id="bodyindex">
 	<nav>
