--- a/Standings.html
+++ b/Standings.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Standings</title>
 	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link rel="stylesheet" href="picnic.css">
 	<link rel="stylesheet" href="design.css">
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
