--- a/Teams.html
+++ b/Teams.html
@@ -8,80 +8,71 @@
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
 <body>
-    <nav>
-		<ul>
-        	<li><a href="Home.html">Home</a></li>
-	      	<li><a href="Teams.html">Teams</a></li>
-            <li><a href="Standings.html">Standings</a></li>
-            <li><a href="Highlights.html">Highlights</a></li>
-		</ul>
-    </nav>
+	<nav>
+  		<a href="index.html" class="brand">
+    		<img class="logo" src="favicon.png" />
+    		<span>Home</span>
+  		</a>
+  		<!-- responsive-->
+  		<input id="bmenub" type="checkbox" class="show">
+ 		<label for="bmenub" class="burger pseudo button">MENU</label>
+
+  		<div class="menu">
+    		<a href="Home.html" class="pseudo button">About the game</a>
+    		<a href="Teams.html" class="pseudo button ">Teams</a>
+    		<a href="Standings.html" class="pseudo button ">Standings</a>
+    		<a href="Highlights.html" class="pseudo button ">Highlights</a>
+  		</div>
+	</nav>
 	<div>
-    	<h1>ALL TEAMS</h1>
-    </div>
-    <table id="tableteams">
-    	<tr>
-    		<th>ATLANTIC</th>
-			<th>CENTRAL</th>
-			<th>SOUTHEAST</th>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/celtics">Boston Celtics</a></td>
-			<td><a href="https://www.nba.com/bulls">Chicago Bulls</a></td>
-			<td><a href="https://www.nba.com/hawks">Atalanta Hawks</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/nets">Brooklyn Nets</a></td>
-			<td><a href="https://www.nba.com/cavaliers">Cleveland Cavs</a></td>
-			<td><a href="https://www.nba.com/hornets">Charlotte Hornets</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/knicks">New York Knicks</a></td>
-			<td><a href="https://www.nba.com/pistons">Detroit Pistons</a></td>
-			<td><a href="https://www.nba.com/heat">Miami Heat</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/sixers">Philadelphia 76ers</a></td>
-			<td><a href="https://www.nba.com/pacers">Indiana Pacers</a></td>
-			<td><a href="https://www.nba.com/magic">Orlando Magic</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/raptors">Toronto Raptors</a></td>
-			<td><a href="https://www.nba.com/bucks">Milwaukee Bucks</a></td>
-			<td><a href="https://www.nba.com/wizards">Washington Wizards</a></td>
-		</tr>
-		<tr>
-    	 	<th>NORTHWEST</th>
-			<th>PACIFIC</th>
-			<th>SOUTHWEST</th>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/nuggets">Denver Nuggets</a></td>
-			<td><a href="https://www.nba.com/warriors">Golden State Warriors</a></td>
-			<td><a href="https://www.nba.com/mavericks">Dallas Mavericks</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/timberwolves">Minnesota Wolves</a></td>
-			<td><a href="https://www.nba.com/clippers">Los Angelis Clippers</a></td>
-			<td><a href="https://www.nba.com/rockets">Houston Rockets</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/thunder">Oklahoma City Thunder</a></td>
-			<td><a href="https://www.nba.com/lakers">Los Angelis Lakers</a></td>
-			<td><a href="https://www.nba.com/grizzlies">Memphis Grizzlies</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/blazers">Portland Trail Blazers</a></td>
-			<td><a href="https://www.nba.com/suns">Phoenix Suns</a></td>
-			<td><a href="https://www.nba.com/pelicans">New Orleans Pelicans</a></td>
-		</tr>
-		<tr>
-			<td><a href="https://www.nba.com/jazz">Utah Jazz</a></td>
-			<td><a href="https://www.nba.com/kings">Sacramento Kings</a></td>
-			<td><a href="https://www.nba.com/spurs">San Antonio Spurs</a></td>
-		</tr>
-     <img src="east.png" alt="Eastern Conference logo">
-     <img src="west.png" alt="Western Conference logo">
+    		<h1>ALL TEAMS</h1>
+    	</div>
+	<div class="grid-container">
+		<div class="grid-item">ATLANTIC</div>
+		<div class="grid-item">CENTRAL</div>
+		<div class="grid-item">SOUTHEAST</div>
+		<div class="grid-item"><a href="https://www.nba.com/celtics">Boston Celtics</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/bulls">Chicago Bulls</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/hawks">Atalanta Hawks</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/nets">Brooklyn Nets</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/cavaliers">Cleveland Cavs</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/hornets">Charlotte Hornets</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/knicks">New York Knicks</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/pistons">Detroit Pistons</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/heat">Miami Heat</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/sixers">Philadelphia 76ers</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/pacers">Indiana Pacers</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/magic">Orlando Magic</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/raptors">Toronto Raptors</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/bucks">Milwaukee Bucks</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/wizards">Washington Wizards</a></div>
+		<div class="grid-item">NWEST</div>
+		<div class="grid-item">PACIFIC</div>
+		<div class="grid-item">SOUTHWEST</div>
+		<div class="grid-item"><a href="https://www.nba.com/nuggets">Denver Nuggets</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/warriors">Golden State Warriors</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/mavericks">Dallas Mavericks</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/timberwolves">Minnesota Wolves</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/clippers">Los Angelis Clippers</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/rockets">Houston Rockets</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/thunder">Oklahoma City Thunder</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/lakers">Los Angelis Lakers</a></div>
+ 		<div class="grid-item"><a href="https://www.nba.com/grizzlies">Memphis Grizzlies</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/blazers">Portland Trail Blazers</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/suns">Phoenix Suns</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/pelicans">New Orleans Pelicans</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/jazz">Utah Jazz</a></div>
+		<div class="grid-item"><a href="https://www.nba.com/kings">Sacramento Kings</a></div>
+ 		<div class="grid-item"><a href="https://www.nba.com/spurs">San Antonio Spurs</a></div>
+	</div>
+	<div class="flex one two-700">
+		<div>
+     			<img src="east.png" alt="Eastern Conference logo">
+		</div>
+     		<div>
+			<img src="west.png" alt="Western Conference logo">
+		</div>
+	</div>
      <p>The information that has been used above can be find on this website,just click on the last word on this sentance,thank you: <a href="https://www.nba.com/teams">HERE!</a></p>  
 </body>
-</html> 
+</html>
