--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 	</head>
 <body id="bodyindex">
 	<nav>
-		<ul>
-        	<li><a href="Home.html">Home</a></li>
-		  	<li><a href="Teams.html">Teams</a></li>
-            <li><a href="Standings.html">Standings</a></li>
-            <li><a href="Highlights.html">Highlights</a></li>
-		</ul>
+  		<a href="index.html" class="brand">
+    		<img class="logo" src="favicon.png" />
+    		<span>Home</span>
+  		</a>
+  		<!-- responsive-->
+  		<input id="bmenub" type="checkbox" class="show">
+ 		<label for="bmenub" class="burger pseudo button">MENU</label>
+
+  		<div class="menu">
+    		<a href="Home.html" class="pseudo button">About the game</a>
+    		<a href="Teams.html" class="pseudo button ">Teams</a>
+    		<a href="Standings.html" class="pseudo button ">Standings</a>
+    		<a href="Highlights.html" class="pseudo button ">Highlights</a>
+  		</div>
 	</nav>
+
 </body>
 </html>
