--- a/Highlights.html
+++ b/Highlights.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Highlights</title>
@@ -8,27 +8,53 @@
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/maya" type="text/css"/>
 </head>
 <body>
-    <nav>
-		<ul>
-			<li><a href="Home.html">Home</a></li>
-			<li><a href="Teams.html">Teams</a></li>
-        	<li><a href="Standings.html">Standings</a></li>
-        	<li><a href="Highlights.html">Highlights</a></li>
-		</ul>
-    </nav>
+	<nav>
+  		<a href="index.html" class="brand">
+    		<img class="logo" src="favicon.png" />
+    		<span>Home</span>
+  		</a>
+  		<!-- responsive-->
+  		<input id="bmenub" type="checkbox" class="show">
+ 		<label for="bmenub" class="burger pseudo button">MENU</label>
+
+  		<div class="menu">
+    		<a href="Home.html" class="pseudo button">About the game</a>
+    		<a href="Teams.html" class="pseudo button ">Teams</a>
+    		<a href="Standings.html" class="pseudo button ">Standings</a>
+    		<a href="Highlights.html" class="pseudo button ">Highlights</a>
+  		</div>
+	</nav>
 	<div>
     	<h1>HIGLIGHTS</h1>
     </div>
-    <p>Video from the early days of basketball.The video is with a black and white format.The Harlem Gloutrobals are the people that play in the video.They are amazing because they do trickshots and amaze the crowd.Thats why the crowd is on its feet and is amazed and they are celebrating every made basket!The videos and the audio was found in this website <a href="https://commons.wikimedia.org/wiki/Category:Videos">CLICK HERE!</a></p>
-    <video controls>
-  		<source src="https://upload.wikimedia.org/wikipedia/commons/6/61/De_%27Harlem_Globetrotters%27_in_Scheveningen_Weeknummer_58-27_-_Open_Beelden_-_11508.ogv" 				type="video/ogg">
-		Your browser does not support the video tag.
-	</video>
-	<audio controls>
-  		<source src="https://upload.wikimedia.org/wikipedia/commons/f/f7/En-us-basketball.ogg" type="audio/ogg">
-		Your browser does not support the audio element.
-	</audio>
-	<img src="ball.jpg" alt="A ball and a hoop">
-	<img src="floor.jpg" alt="A ball on the floor"> 
+	<p>Video from the early days of basketball.The video is with a black and white format.The Harlem Gloutrobals are the people that play in the video.They are amazing because they do trickshots and amaze the crowd.Thats why the crowd is on its feet and is amazed and they are celebrating every made basket!The videos and the audio was found in this website <a href="https://commons.wikimedia.org/wiki/Category:Videos">CLICK HERE!</a></p>	
+    	<div class="flex one two-600 three-800 four-1000">	
+  		<div>
+			<article class="card">
+				<video controls>
+				<source src="https://upload.wikimedia.org/wikipedia/commons/6/61/De_%27Harlem_Globetrotters%27_in_Scheveningen_Weeknummer_58-27_-_Open_Beelden_-_11508.ogv" type="video/ogg">
+				Your browser does not support the video element.
+				</video>
+			</article>
+		</div>
+		<div>
+			<article class="card">
+				<audio controls>
+  				<source src="https://upload.wikimedia.org/wikipedia/commons/f/f7/En-us-basketball.ogg" type="audio/ogg">
+				Your browser does not support the audio element.
+				</audio>
+			</article>
+		</div>	
+		<div>
+			<article class="card">
+				<img src="ball.jpg" alt="A ball and a hoop">
+			</article>
+		</div>
+		<div>
+			<article class="card">
+				<img src="floor.jpg" alt="A ball on the floor">
+			</article>
+		</div>
+	</div> 
 </body>
-</html> 
+</html>
