--- a/Standings.html
+++ b/Standings.html
@@ -9,14 +9,22 @@
 </head>
 <body>
 	<nav>
-		<ul>
-        	<li><a href="Home.html">Home</a></li>
-	        <li><a href="Teams.html">Teams</a></li>
-            <li><a href="Standings.html">Standings</a></li>
-            <li><a href="Highlights.html">Highlights</a></li>
-		</ul>
-   </nav>
-   <div>
+  		<a href="index.html" class="brand">
+    		<img class="logo" src="favicon.png" />
+    		<span>Home</span>
+  		</a>
+  		<!-- responsive-->
+  		<input id="bmenub" type="checkbox" class="show">
+ 		<label for="bmenub" class="burger pseudo button">MENU</label>
+
+  		<div class="menu">
+    		<a href="Home.html" class="pseudo button">About the game</a>
+    		<a href="Teams.html" class="pseudo button ">Teams</a>
+    		<a href="Standings.html" class="pseudo button ">Standings</a>
+    		<a href="Highlights.html" class="pseudo button ">Highlights</a>
+  		</div>
+	</nav>
+   	<div>
    		<h1><b>NBA STANDINGS 2021/2022 SEASON</b></h1>
   		<p id="standings">The NBA playoffs is the postseason tournament of the National Basketball Association (NBA) held to determine the league's champion.An annual best-of-seven elimination tournament,the NBA playoffs are held after the league's regular season and its preliminary postseason tournament, the NBA Play-In Tournament.This is the best about the NBA.The information used to create the tables can be found by going to the following website,that is truly amazing and mind-blowing and truly a must go for fans:<a href="https://www.google.com/search?client=firefox-b-d&q=nba+standings">HERE!</a></p>
       	<p id="para1"><b>Eastern Conference</b></p>
@@ -216,9 +224,15 @@
 				<td>20</td>
 				<td>62</td>
 		    </tr>
-		</table>
-        <img src="finals.png" alt="Finals logo" width="200" height="200"> 
-        <img src="curry.jpg" alt="Curry holding the trophy" width="200" height="200"> 
+	</table>
+	<div class="flex one two-700">
+        	<div>
+			<img src="finals.png" alt="Finals logo">
+		</div>
+        	<div>
+			<img src="curry.jpg" alt="Curry holding the trophy">
+		</div>
+	</div> 
 	</div>
 </body>
 </html> 
