--- a/index.html
+++ b/index.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<html>
-	
-	<head>
-		 <title>Home page</title>
-		 <link rel="icon" type="image/x-icon" href="favicon.png">
-		 <link rel="stylesheet" href="picnic.css">
-		 <link rel="stylesheet" href="design.css">
-	</head>
-<body id="bodyindex">
-	<nav>
-  		<a href="index.html" class="brand">
-    		<img class="logo" src="favicon.png" />
-    		<span>Home</span>
-  		</a>
-  		<!-- responsive-->
-  		<input id="bmenub" type="checkbox" class="show">
- 		<label for="bmenub" class="burger pseudo button">MENU</label>
-
-  		<div class="menu">
-    		<a href="Home.html" class="pseudo button">About the game</a>
-    		<a href="Teams.html" class="pseudo button ">Teams</a>
-    		<a href="Standings.html" class="pseudo button ">Standings</a>
-    		<a href="Highlights.html" class="pseudo button ">Highlights</a>
-  		</div>
-	</nav>
-
-</body>
-</html>
+---
+layout: default1
+title: Home page
+---
